--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
 body {
-    background-color: aquamarine;
+    background-color: black;
+    color: white;
+    text-align: center;
+    background-image: url("./images/background.png");
 }
